correction wrap des textes

--- a/css/menu1.css
+++ b/css/menu1.css
@@ -115,16 +115,16 @@ header {}
 
 .titles span {
     background-color: #9356DC;
-    
+
 }
 
 .titles::before {
     content: "";
     background-color: #99E2D0;
-   display: block;
-   height: 3px;
-   width: 40px;
-   margin-bottom: -25px;
+    display: block;
+    height: 3px;
+    width: 40px;
+    margin-bottom: -25px;
 }
 
 
@@ -192,10 +192,12 @@ header {}
 .anim i {
     color: white;
     font-size: 30px;
+    display: none;
 }
 
 .plat:hover .anim i {
     animation: rotation .5s;
+    display: flex;
 }
 
 
@@ -244,15 +246,24 @@ header {}
 
 .plat-infos {
     display: flex;
-    justify-content: space-between;
-    width: 100%;
     margin-top: 5px;
+    background-color: #99E2D0;
+    
 }
 
 .plat-infos p {
     margin: 0;
     padding: 0;
+    flex: 1;
     font-family: 'roboto', sans-serif;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.plat-infos strong {
+    background-color: #9356DC;
+    width: 12%;
 }
 
 
@@ -271,6 +282,9 @@ header {}
 }
 
 .info p {
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
     padding: 0;
     margin: 0;
 }
@@ -279,8 +293,8 @@ header {}
 .coeurs {
     display: flex;
     align-items: center;
-    background-color: #FF79DA;
     position: relative;
+    width: 20%;
 }
 
 .coeur1 {
@@ -297,7 +311,7 @@ header {}
     background: linear-gradient(to bottom, #FF79DA 30%, #9356DC 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    
+
 }
 
 .coeurs:hover .coeur2 {
